fix video on mobile devices

--- a/resources/js/src/assets/styles/style.scss
+++ b/resources/js/src/assets/styles/style.scss
@@ -1762,6 +1762,7 @@ footer.home-footer {
     animation-delay: 0.4s;
 }
 .top-home-videos video {
+    display: block;
     width: 560px;
 }
 @keyframes rotate {
